# multi_book_chatbot

./: .gitignore  LOG.md  README.md  docker-compose.yaml  pyproject.toml
src/: app.py
src/agents/: book_agent.py  orchestration_agent.py
src/api/: api_models.py  lifespan.py  main.py
src/config/: settings.py
src/memory/: chat_memory.py
src/services/: database_service.py  file_processing_service.py  index_service.py  ingestion_service.py  tool_manager_service.py
src/tools/: query_tools.py  retrieval_tools.py
src/utils/: file_processor.py  index_builder.py  logger_config.py
