[project]
name = "multi-book-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "docx>=0.2.4",
    "docx2md>=1.0.3",
    "fastapi>=0.116.0",
    "google-genai>=1.25.0",
    "ipykernel>=6.29.5",
    "llama-index>=0.12.48",
    "llama-index-agent-openai>=0.4.12",
    "llama-index-core>=0.12.47",
    "llama-index-embeddings-azure-openai>=0.3.9",
    "llama-index-embeddings-google-genai>=0.2.1",
    "llama-index-llms-azure-openai>=0.3.4",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-postprocessor-cohere-rerank>=0.4.0",
    "llama-index-readers-file>=0.4.11",
    "llama-index-storage-chat-store-mongo>=0.1.0",
    "llama-index-storage-chat-store-redis>=0.4.1",
    "llama-index-storage-docstore-mongodb>=0.3.0",
    "llama-index-storage-index-store-mongodb>=0.4.0",
    "llama-index-vector-stores-milvus>=0.8.5",
    "mongo>=0.2.0",
    "motor>=3.7.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymilvus>=2.5.12",
    "pymongo>=4.13.2",
    "pymupdf>=1.26.3",
    "pymupdf4llm>=0.0.26",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "redis>=6.2.0",
    "streamlit>=1.46.1",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.35.0",
]
